게시글 등록 로직 수정

--- a/app/global.css
+++ b/app/global.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'prismjs/themes/prism.css';              /* light */
+@import 'prismjs/themes/prism-tomorrow.css';     /* dark */
 
 ::selection {
   background-color: #47a3f3;
